force-app/main/default/objects/Inspection__c/fields/Above_Defect_Fixes_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Above_Defect_Fixes_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Above Defects Need Not Be Corrected For Safe Oeration Of Vehicle</description>
    <inlineHelpText>Above Defects Need Not Be Corrected For Safe Oeration Of Vehicle</inlineHelpText>
    <label>Above Defect Fixes Not Required</label>
    <type>Checkbox</type>
</CustomField>