force-app/main/default/objects/Inspection__c/fields/Above_Defects_Corrected__c.field-meta.xml
<CustomField>
    <fullName>Above_Defects_Corrected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Above Defects Corrected</label>
    <type>Checkbox</type>
</CustomField>