force-app/main/default/objects/Inspection__c/fields/CONDITION_OF_VEHICLE_SATISFACTORY__c.field-meta.xml
<CustomField>
    <fullName>CONDITION_OF_VEHICLE_SATISFACTORY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CONDITION OF THE VEHICLE IS SATISFACTORY</label>
    <type>Checkbox</type>
</CustomField>