force-app/main/default/objects/Inspection__c/fields/Driver_Initials_Date__c.field-meta.xml
<CustomField>
    <fullName>Driver_Initials_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>