force-app/main/default/objects/Inspection__c/fields/Driver_Signature__c.field-meta.xml
<CustomField>
    <fullName>Driver_Signature__c</fullName>
    <description>Enter Driver Initials
You agree this serves as your digital signature</description>
    <inlineHelpText>Enter Driver Initials
You agree this serves as your digital signature</inlineHelpText>
    <label>Driver Signature (Initials)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>