force-app/main/default/objects/Inspection__c/fields/Mechanic_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_s_Signature__c</fullName>
    <description>Enter Mechanic Initials
You agree this serves as your digital signature</description>
    <label>Mechanic&#39;s Signature (Initials)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>