force-app/main/default/objects/Inspection__c/fields/Mechanic_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Mechanic_Signature_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>