force-app/main/default/objects/Inspection__c/fields/Odometer_End__c.field-meta.xml
<CustomField>
    <fullName>Odometer_End__c</fullName>
    <label>Odometer End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>