force-app/main/default/objects/Inspection__c/fields/Post_Trip_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Post_Trip_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-Trip Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>