force-app/main/default/objects/Inspection__c/fields/Pre_Trip_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pre_Trip_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Trip Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>