force-app/main/default/objects/Inspection__c/fields/Repairs_Required__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Required__c</fullName>
    <label>Repairs Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Compressor</fullName>
            </value>
            <value>
                <fullName>Air Lines</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Belts and Hoses</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Brake Accessories</fullName>
            </value>
            <value>
                <fullName>Brakes, Parking</fullName>
            </value>
            <value>
                <fullName>Brakes, Service</fullName>
            </value>
            <value>
                <fullName>Clutch</fullName>
            </value>
            <value>
                <fullName>Coupling Devices</fullName>
            </value>
            <value>
                <fullName>Defroster/Heater</fullName>
            </value>
            <value>
                <fullName>Drive Line</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Exhaust</fullName>
            </value>
            <value>
                <fullName>Fifth Wheel</fullName>
            </value>
            <value>
                <fullName>Fluid Levels</fullName>
            </value>
            <value>
                <fullName>Frame and Assembly</fullName>
            </value>
            <value>
                <fullName>Front Axle</fullName>
            </value>
            <value>
                <fullName>Fuel Tanks</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Horn</fullName>
            </value>
            <value>
                <fullName>Lights Head, Stop,Tail, Dash, Turn</fullName>
            </value>
            <value>
                <fullName>Mirrors</fullName>
            </value>
            <value>
                <fullName>Muffler</fullName>
            </value>
            <value>
                <fullName>Oil Level</fullName>
            </value>
            <value>
                <fullName>Radiator Level</fullName>
            </value>
            <value>
                <fullName>Rear End</fullName>
            </value>
            <value>
                <fullName>Reflectors</fullName>
            </value>
            <value>
                <fullName>Safety Equipment</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>