force-app/main/default/objects/Inspection__c/fields/Repairs_Required_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Required_Trailer__c</fullName>
    <label>Repairs Required - Trailer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brake Connections</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Coupling Devices</fullName>
            </value>
            <value>
                <fullName>Coupling (King) Pin</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
            <value>
                <fullName>Hitch</fullName>
            </value>
            <value>
                <fullName>Landing Gear</fullName>
            </value>
            <value>
                <fullName>Lights - All</fullName>
            </value>
            <value>
                <fullName>Reflectors/Reflective Tape</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
            <value>
                <fullName>Suspension System</fullName>
            </value>
            <value>
                <fullName>Straps</fullName>
            </value>
            <value>
                <fullName>Tarpaulin</fullName>
            </value>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Wheels and Rims</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>