force-app/main/default/objects/Inspection__c/validationRules/Require_Post_Trip_Inspection.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Post_Trip_Inspection</fullName>
    <active>true</active>
    <errorConditionFormula>Post_Trip_Inspection_Completed__c = FALSE</errorConditionFormula>
    <errorMessage>You must complete the Post-Trip Inspection</errorMessage>
</ValidationRule>