force-app/main/default/objects/Inspection__c/validationRules/Require_Pre_Trip_Inspection.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Pre_Trip_Inspection</fullName>
    <active>true</active>
    <errorConditionFormula>Pre_Trip_Inspection_Completed__c = FALSE</errorConditionFormula>
    <errorMessage>You must complete Pre-Trip Inspection</errorMessage>
</ValidationRule>